<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard"
    tools:context=".ChangePassword">

<!--    <ImageView-->
<!--        android:id="@+id/applogo"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="98dp"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_alignParentTop="true"-->

<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="152dp"-->
<!--        android:src="@drawable/"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.364"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="Change Password"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/txtnewpassowrd"
        android:layout_width="370dp"
        android:layout_height="61dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <Button
        android:id="@+id/btnchgpassword"
        android:layout_width="357dp"
        android:layout_height="56dp"
        android:background="@drawable/round_bg"
        android:text="@string/changepassowrd"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <EditText
        android:id="@+id/txtoldpassword"
        android:layout_width="369dp"
        android:layout_height="60dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/oldpassword"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <TextView
        android:id="@+id/show1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOW"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="@+id/txtoldpassword"
        app:layout_constraintEnd_toEndOf="@+id/txtoldpassword"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="@+id/txtoldpassword"
        app:layout_constraintTop_toTopOf="@+id/txtoldpassword"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/show3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOW"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="@+id/txtnewpassowrd2"
        app:layout_constraintEnd_toEndOf="@+id/txtnewpassowrd2"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="@+id/txtnewpassowrd2"
        app:layout_constraintTop_toTopOf="@+id/txtnewpassowrd2"
        app:layout_constraintVertical_bias="0.595" />

    <TextView
        android:id="@+id/show2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOW"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="@+id/txtnewpassowrd"
        app:layout_constraintEnd_toEndOf="@+id/txtnewpassowrd"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="@+id/txtoldpassword"
        app:layout_constraintTop_toTopOf="@+id/txtnewpassowrd"
        app:layout_constraintVertical_bias="0.547" />

    <EditText
        android:id="@+id/txtnewpassowrd2"
        android:layout_width="370dp"
        android:layout_height="61dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

</androidx.constraintlayout.widget.ConstraintLayout>